# MAISIANDSAIDSA

./: README.md  darkmax.go  go.mod  keys.json  keys.json.checksum  keys.json.enc  uso
Synapsis/: .gitignore  CHANGELOG.md  CHAT_README.md  CONFIGURACION_FINAL.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  EJEMPLOS_USO.md  GESTION_PROYECTO.md  GITHUB_README.md  GUIA_RAPIDA.md  IMPLEMENTATION_SUMMARY.md  INSTRUCCIONES_FINALES.md  INTELLIGENT_ORCHESTRATOR.md  LICENSE  NEXT_STEPS_SECURE_MCP.md  PARALLEL_THREAT_DETECTION_100_PERCENT.md  README.md  SECURE_MCP_SETUP.md  SECURITY.md  SECURITY_FINAL_REPORT.md  SECURITY_FIXES.md  SECURITY_IMPLEMENTATION_FINAL.md  SECURITY_SKILLS_10_10.md  SIN_ERRORES.md  SPEC.md  TASKS_ANALYSIS.md  TCP_RECOMMENDATIONS.md  TERMINAL_README.md  TODOWrite.md  TODO_SECURE_MCP.md  build.rs  chat.html  chat_server.py  chat_terminal.py  cli-helper.sh  compile_secure_mcp.sh  config_simple.sh  coordinate_all.py  cyberchat_config.sh  (+17 more)
Synapsis/.github/: CODE_OF_CONDUCT.md
Synapsis/docs/: CVE-ANALYSIS.md  ENGRAM_VS_SYNAPSIS.md  EVENT_BUS_IMPROVEMENT.md  GITHUB-TOOL.md  IMPROVEMENTS-vs-ENGRAM.md  MODULARIZACION_ESTADO_REAL.md  MULTI-AGENT.md  MULTI_AGENT_COORDINATION.md  MULTI_AGENT_WORKFLOW.md  PLUGIN_SYSTEM_GUIDE.md  PQC_PLUGIN_MIGRATION.md  SECURITY-10-10.md  SECURITY.md  SESSION_CLEANUP.md  SYNAPSIS_ANALYSIS_COMPARATIVE.md  TCP_API.md  YOLO_MODE.md  plugin-migration-plan.md  secure_protocol_sequence.md
Synapsis/examples/: plugin_usage.rs
Synapsis/scripts/: auto-update-demo.sh  auto_mcp_config.sh  gemini-mcp-example.json  ollama-parallel-dev.sh  ollama-subagents.sh  security-10-10.sh  synapsis-mcp-bridge.sh
Synapsis/src/: config.rs  lib.rs  main.rs  main.rs.backup  session_cleanup.rs  updater.rs
Synapsis/systemd/: synapsis-mcp-secure.service
Synapsis/tests/: compression_tests.rs  context_tests.rs  mcp_integration_tests.rs.disabled  multi_agent_bridge_test.sh  orchestration_tests.rs  secure_handshake_test.py  stress_tests.rs  synapsis_agents_tests.rs  synapsis_database_tests.rs  synapsis_database_tests.rs.backup  synapsis_fuzz_tests.rs  synapsis_fuzz_tests.rs.backup  synapsis_pqc_integration.rs  synapsis_skills_tests.rs  (+1 more)
(+41 files in other folders)
