[package]
name = "synapsis"
version = "0.1.0"
edition = "2021"
authors = ["methodwhite"]
description = "Persistent memory engine for AI agents with PQC security"
license = "MIT"

[features]
default = ["security"]
security = []
tui = []
browser = ["dep:headless_chrome"]

[lib]
name = "synapsis"
path = "src/lib.rs"

[[bin]]
name = "synapsis"
path = "src/main.rs"

[[bin]]
name = "synapsis-mcp"
path = "src/bin/mcp.rs"

#[[bin]]
#name = "synapsis-server"
#path = "src/bin/server.rs"

[[bin]]
name = "synapsis-ollama"
path = "src/bin/ollama.rs"

#[[bin]]
#name = "synapsis-http"
#path = "src/bin/http.rs"

[dependencies]
# Synapsis Core (library)
synapsis-core = { path = "../synapsis-core", features = ["full"] }

# Core (duplicated from synapsis-core for presentation layer)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "blob", "serde_json", "sqlcipher"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.22"
prusia-vault = { version = "0.1.0", path = "../prusia-vault", features = ["pqc"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
hmac-sha1 = "0.2"

# Session ID
hostname = "0.4"
getrandom = "0.2"
lazy_static = "1.4"
hex = "0.4"

# PQC
pqcrypto-traits = "0.3.5"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"

# CLI
clap = { version = "4", features = ["derive"] }
regex = "1"
env_logger = "0.11"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3"

# Crypto
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
mdns-sd = "0.11"

# Browser automation
headless_chrome = { version = "0.9", optional = true }
failure = "0.1"

# System monitoring
sysinfo = "0.38"

# System control
ctrlc = "3.4"
libc = "0.2"

# Dynamic loading for plugins
libloading = "0.8"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
